test/resources/invalid/typecheck/InvalidNetworkUrlNotString.flo
action GET_ALL_POSTS = network(url = 4, method = 'GET');

flow POSTS = {
    array posts = [];
    GET_ALL_POSTS >> posts;
}